<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_b"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="334dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/logo_Description"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/nombreDoc"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_white"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/celularDoc"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_white"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocupacion"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/ocupacionDoc"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_white"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/contra"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_white"
            android:gravity="center"
            android:password="true"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/save2"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="125dp"
            android:background="@drawable/redondo_green"
            android:text="@string/guardar"
            android:textColor="@color/white"
            android:textSize="25sp" />

            <ImageButton
                android:id="@+id/ibtn_atras"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                android:background="@drawable/image_atras"
                android:text="@string/regresar"
                android:layout_gravity="right"
                android:layout_marginRight="10pt"
                android:layout_marginTop="5dp" />

        </LinearLayout>




    </LinearLayout>
   </LinearLayout>