<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_d"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/exit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/exit_picture"
        tools:srcCompat="@drawable/exit" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="150dp"
        android:src="@tools:sample/avatars"
        android:contentDescription="@string/fotoUser" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="241dp"
        android:layout_height="36dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/white_card">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/pacientes"
            android:textColor="@color/gray"
            android:textSize="24sp"
        />

        <Button
            android:id="@+id/nombre1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="12pt"
            android:layout_gravity="center"
            android:background="@drawable/redondo_green"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/anadir"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/green"
            android:background="@drawable/redondo_principal_azul"
            android:textColor="@android:color/white"
            tools:srcCompat="@drawable/image_menu_green" />

        <ImageButton
            android:id="@+id/add1"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/image_menu"
 />


    </LinearLayout>



</LinearLayout>