<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5pt"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:background="@drawable/white_card">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            />

        <EditText
            android:id="@+id/nombrePaciente"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_principal_azul"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_principal_azul"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/peso"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_principal_azul"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estatura"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/estatura"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_principal_azul"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/padecimientos"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/padecimientos"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/redondo_principal_azul"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/input"
            tools:ignore="LabelFor" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/image_menu_green"/>
            <Button
                android:id="@+id/save2"
                android:layout_width="178dp"
                android:background="@drawable/redondo_green"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="125dp"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:textSize="25sp"
                />
    </LinearLayout>



        <ImageButton
            android:id="@+id/btn_atras"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:background="@drawable/image_atras"
            android:text="@string/regresar"
            android:layout_gravity="right"
            android:layout_marginRight="10pt"
            android:layout_marginTop="5dp"

            />

    </LinearLayout>
</LinearLayout>