<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_l"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fondo_ovalado_abajo"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/busqueda"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:hint="Buscar algo especifico en el expediente"
            android:background="@color/blueBajo"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPersonName" />


        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/microphone"
             android:background="@drawable/image_mic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/redondo_white_z"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resultados"
            android:textSize="20sp" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="99pt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="103dp"
                android:layout_marginLeft="65pt"
                android:layout_gravity="center"
                android:background="@drawable/image_menu" />

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="15pt"
                android:layout_marginLeft="60dp"
                android:background="@drawable/image_atras" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>