<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
       android:layout_gravity="center"
        android:layout_width="109dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@drawable/redondo_principal_azul"
        android:backgroundTint="@color/sec" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
       android:text="PRINCIPAL" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="REGISTRO DOCTORES" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="BITÁCORA" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="PERFIL MÉDICO" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Unidades Médicas" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Búsqueda" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="REGISTRO PACIENTES" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/contraseña"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/providerTextView"
        android:layout_gravity="center"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:background="@drawable/redondo_principal_azul"
        android:backgroundTint="@color/sec" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/redondo_principal_azul"
        android:text="@string/CLOSE" />


</LinearLayout>